Revert "Increase coverpage max-width by 30px to prevent bullet wrapping"
This reverts commit a65f6f2487add1e8224ff5fe946297870b48de90.

--- a/docsify.css
+++ b/docsify.css
@@ -234,7 +234,7 @@ section.cover {
 }
 
 section.cover .cover-main {
-  max-width: 730px;
+  max-width: 700px;
 }
 
 section.cover .cover-main > p:first-child img {
